# CashFIRE_bot

./: README.md  bot.py  chooser.py  controller.py  main.py  pyproject.toml  test_evaluation.py
data_source/: data_loaders.py
db/: db.py
evaluating_funds/: evaluating.py
models/: models.py
recommenders/: recommenders.py
risk_models/: risk_models.py
statistics/: industries.py  stocks.py
utils/: funds_mapping.py  industries_mapping.py  inflation.py
