[tool.poetry]
name = "finance bot"
version = "1.0.0"
description = "Bot for investing"
authors = ["Kristina Fomina", "Alexey Kryuchkov", "Ilya Isko"]

[tool.poetry.dependencies]
python = "3.9.5"
python-dotenv = "0.19.0"
python-telegram-bot = "13.7"
numpy = "1.23.5"
scikit-learn = "1.2.0"
psycopg2-binary = "2.9.5"
